<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="?android:attr/activatedBackgroundIndicator">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_margin="@dimen/margin_todo_list_item"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/toDoTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/toDoTitle"
                android:textSize="@dimen/toDoTitle" />

            <TextView
                android:id="@+id/toDoTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_marginLeft="@dimen/margin_left_todo_datetime"
                android:text="@string/toDoTime"
                android:textSize="@dimen/toDoDateTime" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/toDoDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/toDoDescription"
                android:textSize="@dimen/toDoDescription" />

            <TextView
                android:id="@+id/toDoDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_marginLeft="@dimen/margin_left_todo_datetime"
                android:text="@string/toDoDate"
                android:textSize="@dimen/toDoDateTime" />

        </LinearLayout>


    </LinearLayout>

    <ImageView
        android:id="@+id/toDoState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:clickable="true"
        android:focusable="false"
        android:onClick="onChangeToDoState"
        android:contentDescription="@string/toDoState" />

</LinearLayout>